<resources>
    <!--Strings in nav and main -->
    <string name="app_name">ECommerce</string>
    <string name="title_home">Catalog</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_dashboard2">Hello Dude!</string>
    <string name="title_car">"Shopping Car"</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="btnRegister">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>