<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ecommerce.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_beerFragment"
            app:destination="@id/beerFragment" />
        <action
            android:id="@+id/action_navigation_home_to_tequilaFragment2"
            app:destination="@id/tequilaFragment2" />
        <action
            android:id="@+id/action_navigation_home_to_vodkaFragment"
            app:destination="@id/vodkaFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.ecommerce.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.ecommerce.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ecommerce.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_startMenu"
            app:destination="@id/startMenu" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/startMenu"
        android:name="com.example.ecommerce.ui.menu.StartMenuFragment"
        android:label="fragment_start_menu"
        tools:layout="@layout/fragment_start_menu" >
        <action
            android:id="@+id/action_startMenu_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_startMenu_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/beerFragment"
        android:name="com.example.ecommerce.BeerFragment"
        android:label="fragment_beer"
        tools:layout="@layout/fragment_beer" />
    <fragment
        android:id="@+id/tequilaFragment2"
        android:name="com.example.ecommerce.TequilaFragment"
        android:label="fragment_tequila"
        tools:layout="@layout/fragment_tequila" />
    <fragment
        android:id="@+id/vodkaFragment"
        android:name="com.example.ecommerce.VodkaFragment"
        android:label="fragment_vodka"
        tools:layout="@layout/fragment_vodka" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.ecommerce.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_startMenu"
            app:destination="@id/startMenu" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.ecommerce.ui.cart.CartFragment"
        android:label="Cart"
        tools:layout="@layout/fragment_cart">

        <action
            android:id="@+id/action_cartFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>

    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.ecommerce.ui.payment.PaymentFragment"
        android:label="Payment"
        tools:layout="@layout/fragment_payment" >

        <action
            android:id="@+id/action_paymentFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/itemFragment"
        android:name="com.example.ecommerce.ui.cart.CartFragment"
        android:label="Cart"
        tools:layout="@layout/fragment_cart">

        <action
            android:id="@+id/action_cartFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>




</navigation>